Fix Firefox horizontal scrolling
Firefox is a bit pickier about scrollable areas inside flexboxes, but it’s not out of spec.

--- a/src/encoded/static/scss/encoded/modules/_matrix.scss
+++ b/src/encoded/static/scss/encoded/modules/_matrix.scss
@@ -62,6 +62,7 @@ $row-data-header-width: 200px;
         width: calc(100% - 20px);
         border : 1px solid #eee;
         overflow: hidden;
+        min-width: 0;
     }
 
     @at-root #{&}__data {
